<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notification.Activities.NotificationActivity">

    <ImageView
        android:id="@+id/notification_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:id="@+id/main_layout_cabin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/notification_back"
        android:fillViewport="true"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/notification_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/host_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:text="@string/setting_title"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/notification_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/host_title"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/notification_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notification_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:drawableEnd="@drawable/ic_phone"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/notification_date_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notification_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_hint"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notification_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/notification_status"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notification_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/accept_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/seekbar_color"
                    android:text="@string/notification_accept"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/refuse_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/red"
                    android:text="@string/notification_decline"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/resend_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/seekbar_color"
                    android:text="@string/notification_resend"
                    android:textColor="@color/white"
                    android:visibility="gone"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/notification_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>