<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seekbar_color"
    android:fillViewport="true"
    android:scrollbars="none">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/auth_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/button_layout"

                android:gravity="center_vertical"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_facebook"
                    android:textColor="@color/seekbar_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_create"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/login_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/login_button_layout"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/login_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <AutoCompleteTextView
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button_layout"
                android:background="@drawable/border_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/register_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/register_button_layout"
                android:gravity="center_vertical"
                android:text="@string/login_create"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/register_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_name"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <AutoCompleteTextView
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <AutoCompleteTextView
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <AutoCompleteTextView
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_password"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>



            <TextView
                android:id="@+id/register_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_button_layout"
                android:background="@drawable/border_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/forgot_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/forgot_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/forgot_button_layout"
                android:gravity="center_vertical"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/forgot_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/forgot_hint"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:id="@+id/forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_background_white"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/forgot_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgot_button_layout"
                android:background="@drawable/border_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>