<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.activities.SettingsActivity">
    <RelativeLayout
        android:id="@+id/host_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/setting_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/setting_apply"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_check"/>

        <TextView
            android:id="@+id/host_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_back"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/setting_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/location_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/host_title"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/setting_currency"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.EditText"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/setting_language"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.EditText"
                android:layout_marginEnd="20dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>